--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             <nav class="main-nav">
                 <a href="/">Clusters</a>
                 <a href="/tags/">Tags</a>
+                <a href="/faces/">Faces</a>
                 <a href="https://www.teliatv.ee/saade/34368457/1/xxviii-laulupidu-iseoma-suurkontsert" target="_blank">Recording</a>
                 <a href="https://github.com/Lauriy/leia-laulja" target="_blank">GitHub</a>
             </nav>
